Add canonical abbreviations for each conference

--- a/bbt.bib
+++ b/bbt.bib
@@ -1,8 +1,9 @@
 @inproceedings{Abramsky2004,
   author        = {Abramsky, Samson and Coecke, Bob},
-  booktitle     = {Proceedings of the 19th {{Annual IEEE Symposium}} on {{Logic}} in {{Computer Science}}, 2004.},
+  booktitle     = {Proceedings of the 19th {{Annual IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
   title         = {A Categorical Semantics of Quantum Protocols},
   year          = {2004},
+  series        = {{{LICS}} '04},
   month         = jul,
   pages         = {415--425},
   publisher     = {{IEEE Computer Science Press}},
@@ -28,10 +29,11 @@
 @inproceedings{Altenkirch2005,
   author        = {Altenkirch, Thorsten and Grattage, Jonathan},
   abstract      = {We introduce the language QML, a functional language for quantum computations on finite types. Its design is guided by its categorical semantics: QML programs are interpreted by morphisms in the category FQC of finite quantum computations, which provides a constructive semantics of irreversible quantum computations realisable as quantum gates. QML integrates reversible and irreversible quantum computations in one language, using first order strict linear logic to make weakenings explicit. Strict programs are free from decoherence and hence preserve superpositions and entanglement - which is essential for quantum parallelism.},
-  booktitle     = {Proceedings of the Twentieth Annual {{IEEE}} Symposium on Logic in Computer Science ({{LICS}} 2005)},
+  booktitle     = {Proceedings of the Twentieth Annual {{IEEE}} Symposium on Logic in Computer Science},
   title         = {A Functional Quantum Programming Language},
   note          = {Introduces QML},
   year          = {2005},
+  series        = {{{LICS}} '05},
   address       = {{Chicago, USA}},
   month         = jun,
   pages         = {249--258},
@@ -62,7 +64,7 @@
 
 @inproceedings{Amy2019,
   author    = {Amy, Matthew},
-  booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic, Halifax, Canada, 3--7th June 2018},
+  booktitle = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, 3--7th June 2018},
   title     = {Towards Large-Scale Functional Verification of Universal Quantum Circuits},
   abstract  = {We introduce a framework for the formal specification and verification of quantum circuits based on the Feynman path integral. Our formalism, built around exponential sums of polynomial functions, provides a structured and natural way of specifying quantum operations, particularly for quantum implementations of classical functions. Verification of circuits over all levels of the Clifford hierarchy with respect to either a specification or reference circuit is enabled by a novel rewrite system for exponential sums with free variables. Our algorithm is further shown to give a polynomial-time decision procedure for checking the equivalence of Clifford group circuits. We evaluate our methods by performing automated verification of optimized Clifford+T circuits with up to 100 qubits and thousands of T gates, as well as the functional verification of quantum algorithms using hundreds of qubits. Our experiments culminate in the automated verification of the Hidden Shift algorithm for a class of Boolean functions in a fraction of the time it has taken recent algorithms to simulate.},
   year      = {2019},
@@ -78,7 +80,7 @@
 
 @inproceedings{Amy2019a,
   author        = {Amy, Matthew},
-  booktitle     = {Reversible {{Computation}}},
+  booktitle     = {Reversible {{Computation}} ({{RC}} '19)},
   title         = {Sized {{Types}} for {{Low}}-{{Level Quantum Metaprogramming}}},
   year          = {2019},
   editor        = {Thomsen, Michael Kirkedal and Soeken, Mathias},
@@ -97,7 +99,7 @@
 
 @inproceedings{Badescu2015,
   author    = {B{\u a}descu, Costin and Panangaden, Prakash},
-  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic, Oxford, {{U}}.{{K}}., July 15--17, 2015},
+  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, {{U}}.{{K}}., July 15--17, 2015},
   title     = {Quantum Alternation: {{Prospects}} and Problems},
   abstract  = {We propose a notion of quantum control in a quantum programming language which permits the superposition of finitely many quantum operations without performing a measurement. This notion takes the form of a conditional construct similar to the IF statement in classical programming languages. We show that adding such a quantum IF statement to the QPL programming language simplifies the presentation of several quantum algorithms. This motivates the possibility of extending the denotational semantics of QPL to include this form of quantum alternation. We give a denotational semantics for this extension of QPL based on Kraus decompositions rather than on superoperators. Finally, we clarify the relation between quantum alternation and recursion, and discuss the possibility of lifting the semantics defined by Kraus operators to the superoperator semantics defined by Selinger.},
   year      = {2015},
@@ -154,7 +156,7 @@
   month      = jun,
   pages      = {286--300},
   publisher  = {{Association for Computing Machinery}},
-  series     = {{{PLDI}} 2020},
+  series     = {{{PLDI}} '20},
   abstract   = {Existing quantum languages force the programmer to work at a low level of abstraction leading to unintuitive and cluttered code. A fundamental reason is that dropping temporary values from the program state requires explicitly applying quantum operations that safely uncompute these values. We present Silq, the first quantum language that addresses this challenge by supporting safe, automatic uncomputation. This enables an intuitive semantics that implicitly drops temporary values, as in classical computation. To ensure physicality of Silq's semantics, its type system leverages novel annotations to reject unphysical programs. Our experimental evaluation demonstrates that Silq programs are not only easier to read and write, but also significantly shorter than equivalent programs in other quantum languages (on average -46\% for Q\#, -38\% for Quipper), while using only half the number of quantum primitives.},
   doi        = {10.1145/3385412.3386007},
   isbn       = {978-1-4503-7613-6},
@@ -182,7 +184,7 @@
 
 @misc{Chareton2020,
   author        = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Beno{\^i}t},
-  note          = {Extended version of: \href{http://dx.doi.org/10.1007/978-3-030-72019-3_6}{An Automated Deductive Verification Framework for Circuit-building Quantum Programs} presented at ESOP 2021},
+  note          = {Extended version of \cite{Chareton2021}},
   crossref      = {Chareton2021},
   title         = {A {{Deductive Verification Framework}} for {{Circuit}}-Building {{Quantum Programs}}},
   month         = jul,
@@ -233,6 +235,7 @@
   pages     = {298--310},
   publisher = {{Springer}},
   series    = {Lecture {{Notes}} in {{Computer Science}}},
+  volume    = {5126},
   abstract  = {We formalise the constructive content of an essential feature of quantum mechanics: the interaction of complementary quantum observables, and information flow mediated by them. Using a general categorical formulation, we show that pairs of mutually unbiased quantum observables form bialgebra-like structures. We also provide an abstract account on the quantum data encoded in complex phases, and prove a normal form theorem for it. Together these enable us to describe all observables of finite dimensional Hilbert space quantum mechanics. The resulting equations suffice to perform computations with elementary quantum gates, translate between distinct quantum computational models, establish the equivalence of entangled quantum states, and simulate quantum algorithms such as the quantum Fourier transform. All these computations moreover happen within an intuitive diagrammatic calculus.},
   doi       = {10.1007/978-3-540-70583-3_25},
   isbn      = {978-3-540-70583-3},
@@ -335,7 +338,9 @@
 
 @inproceedings{Fu2020a,
   author        = {Fu, Peng and Kishida, Kohei and Ross, Neil J. and Selinger, Peter},
-  booktitle     = {Reversible Computation},
+  booktitle     = {Reversible Computation (RC '20)},
+  series        = {Lecture Notes in Computer Science},
+  volume        = {12227},
   title         = {A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper},
   year          = {2020},
   month         = jul,
@@ -426,7 +431,7 @@
 
 @inproceedings{Green2013a,
   author        = {Green, Alexander S. and Lumsdaine, Peter LeFanu and Ross, Neil J. and Selinger, Peter and Valiron, Beno{\^i}t},
-  booktitle     = {Reversible {{Computation}}},
+  booktitle     = {Reversible {{Computation}} ({{RC}} '13)},
   title         = {An {{Introduction}} to {{Quantum Programming}} in {{Quipper}}},
   year          = {2013},
   editor        = {Dueck, Gerhard W. and Miller, D. Michael},
@@ -479,7 +484,7 @@
 
 @unpublished{Hietala2019,
   author        = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
-  note          = {Talk at QPL '19. Superseded by \href{http://dx.doi.org/10.1145/3434318}{A Verified Optimizer for Quantum Circuits}},
+  note          = {Talk at QPL '19. Superseded by \cite{Hietala2021}},
   crossref      = {Hietala2021},
   title         = {Verified {{Optimization}} in a {{Quantum Intermediate Representation}}},
   month         = apr,
@@ -591,7 +596,7 @@
 
 @inproceedings{Liu2019,
   author    = {Liu, Junyi and Zhan, Bohua and Wang, Shuling and Ying, Shenggang and Liu, Tao and Li, Yangjia and Ying, Mingsheng and Zhan, Naijun},
-  booktitle = {Computer {{Aided Verification}}},
+  booktitle = {Computer {{Aided Verification}} ({{CAV}} '19)},
   title     = {Formal {{Verification}} of {{Quantum Algorithms Using Quantum Hoare Logic}}},
   year      = {2019},
   month     = jul,
@@ -600,6 +605,7 @@
   pages     = {187--207},
   publisher = {{Springer International Publishing}},
   series    = {Lecture {{Notes}} in {{Computer Science}}},
+  volume    = {11562},
   abstract  = {We formalize the theory of quantum Hoare logic (QHL) [TOPLAS 33(6),19], an extension of Hoare logic for reasoning about quantum programs. In particular, we formalize the syntax and semantics of quantum programs in Isabelle/HOL, write down the rules of quantum Hoare logic, and verify the soundness and completeness of the deduction system for partial correctness of quantum programs. As preliminary work, we formalize some necessary mathematical background in linear algebra, and define tensor products of vectors and matrices on quantum variables. As an application, we verify the correctness of Grover's search algorithm. To our best knowledge, this is the first time a Hoare logic for quantum programs is formalized in an interactive theorem prover, and used to verify the correctness of a nontrivial quantum algorithm.},
   doi       = {10.1007/978-3-030-25543-5_12},
   isbn      = {978-3-030-25543-5},
@@ -644,13 +650,15 @@
 
 @inproceedings{Paolini2017,
   author     = {Paolini, Luca and Zorzi, Margherita},
-  booktitle  = {Theory and {{Applications}} of {{Models}} of {{Computation}}},
+  booktitle  = {Theory and {{Applications}} of {{Models}} of {{Computation}} ({{TAMC}} '17)},
   title      = {{{qPCF}}: {{A Language}} for {{Quantum Circuit Computations}}},
   year       = {2017},
   month      = apr,
   pages      = {455--469},
+  doi        = {10.1007/978-3-319-55911-7_33},
   publisher  = {{Springer International Publishing}},
   series     = {Lecture {{Notes}} in {{Computer Science}}},
+  volume     = {10185},
   abstract   = {We propose qPCF, a functional language able to define and manipulate quantum circuits in an easy and intuitive way. qPCF follows the tradition of “quantum data & classical control” languages, inspired to the QRAM model. Ideally, qPCF computes finite circuit descriptions which are offloaded to a quantum co-processor (i.e. a quantum device) for the execution. qPCF extends   PCF  with a new kind of datatype: quantum circuits. The typing of qPCF is quite different from the mainstream of “quantum data & classical control” languages that involves linear/exponential modalities. qPCF uses a simple form of dependent types to manage circuits and an implicit form of monad to manage quantum states via a destructive-measurement operator.},
   isbn       = {978-3-319-55911-7},
   shorttitle = {qPCF},
@@ -659,7 +667,7 @@
 
 @inproceedings{Paolini2019,
   author    = {Paolini, Luca and Roversi, Luca and Zorzi, Margherita},
-  booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications, Oxford, {{UK}}, 7--8 July 2018},
+  booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications (Linearity-TLLA '18), Oxford, {{UK}}, 7--8 July 2018},
   title     = {Quantum {{Programming Made Easy}}},
   year      = {2019},
   editor    = {Ehrhard, Thomas and Fern{\'a}ndez, Maribel and de Paiva, Valeria and {Tortora de Falco}, Lorenzo},
@@ -690,7 +698,8 @@
 
 @inproceedings{Paykin2017,
   author    = {Paykin, Jennifer and Rand, Robert and Zdancewic, Steve},
-  booktitle = {Proceedings of the 44th {{ACM SIGPLAN Symposium}} on {{Principles}} of {{Programming Languages}} ({{POPL}} 2017)},
+  booktitle = {Proceedings of the 44th {{ACM SIGPLAN Symposium}} on {{Principles}} of {{Programming Languages}}},
+  series    = {{{POPL}} '17},
   title     = {{{QWIRE}}: A Core Language for Quantum Circuits},
   abstract  = {This paper introduces QWIRE (``choir''), a language for defining quantum circuits and an interface for manipulating them inside of an arbitrary classical host language. QWIRE is minimal---it contains only a few primitives---and sound with respect to the physical properties entailed by quantum mechanics. At the same time, QWIRE is expressive and highly modular due to its relationship with the host language, mirroring the QRAM model of computation that places a quantum computer (controlled by circuits) alongside a classical computer (controlled by the host language).
 
@@ -735,7 +744,7 @@
 
 @inproceedings{Rand2018,
   author    = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
-  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic, Nijmegen, the Netherlands, 3--7 July 2017},
+  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, 3--7 July 2017},
   title     = {{{QWIRE}} Practice: {{Formal}} Verification of Quantum Circuits in Coq},
   abstract  = {We describe an embedding of the QWIRE quantum circuit language in the Coq proof assistant. This allows programmers to write quantum circuits using high-level abstractions and to prove properties of those circuits using Coq's theorem proving features. The implementation uses higher-order abstract syntax to represent variable binding and provides a type-checking algorithm for linear wire types, ensuring that quantum circuits are well-formed. We formalize a denotational semantics that interprets QWIRE circuits as superoperators on density matrices, and prove the correctness of some simple quantum programs.},
   year      = {2018},
@@ -769,9 +778,9 @@
   url       = {https://repository.upenn.edu/edissertations/3175}
 }
 
-@inproceedings{Rand2018b,
+@misc{Rand2018b,
   author    = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
-  booktitle = {The Fourth International Workshop on Coq for Programming Languages},
+  note      = {Talk at The Fourth International Workshop on Coq for Programming Languages (CoqPL '18)},
   title     = {Phantom {{Types}} for {{Quantum Programs}}},
   year      = {2018},
   month     = jan,
@@ -787,7 +796,7 @@
   month      = jan,
   title      = {{{ReQWIRE}}: {{Reasoning}} about {{Reversible Quantum Circuits}}},
   editor     = {Selinger, Peter and Chiribella, Giulio},
-  booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic, Halifax, Canada, 3--7th June 2018},
+  booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, 3--7th June 2018},
   series     = {Electronic Proceedings in Theoretical Computer Science},
   volume     = {287},
   publisher  = {Open Publishing Association},
@@ -798,9 +807,9 @@
   timestamp  = {2021-04-18}
 }
 
-@article{Rennela2018,
+@inproceedings{Rennela2018,
   author    = {Rennela, Mathys and Staton, Sam},
-  journal   = {Electronic Notes in Theoretical Computer Science},
+  series    = {Electronic Notes in Theoretical Computer Science},
   title     = {Classical {{Control}} and {{Quantum Circuits}} in {{Enriched Category Theory}}},
   year      = {2018},
   month     = apr,
@@ -808,13 +817,14 @@
   volume    = {336},
   abstract  = {We describe categorical models of a circuit-based (quantum) functional programming language. We show that enriched categories play a crucial role. Following earlier work on QWire by Paykin et al., we consider both a simple first-order linear language for circuits, and a more powerful host language, such that the circuit language is embedded inside the host language. Our categorical semantics for the host language is standard, and involves cartesian closed categories and monads. We interpret the circuit language not in an ordinary category, but in a category that is enriched in the host category. As an extended example, we recall an earlier result that the category of W*-algebras is dcpo-enriched, and we use this model to extend the circuit language with some recursive types.},
   doi       = {10.1016/j.entcs.2018.03.027},
-  series    = {The {{Thirty}}-Third {{Conference}} on the {{Mathematical Foundations}} of {{Programming Semantics}} ({{MFPS XXXIII}})},
+  publisher = {Elsevier},
+  booktitle = {The {{Thirty}}-Third {{Conference}} on the {{Mathematical Foundations}} of {{Programming Semantics}} ({{MFPS XXXIII}})},
   timestamp = {2021-04-18}
 }
 
 @inproceedings{Rios2018,
   author    = {Rios, Francisco and Selinger, Peter},
-  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic, Nijmegen, the Netherlands, 3--7 July 2017},
+  booktitle = {Proceedings 14th International Conference on Quantum Physics and Logic (QPL), Nijmegen, the Netherlands, 3--7 July 2017},
   title     = {A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)},
   abstract  = {Quipper is a practical programming language for describing families of quantum circuits. In this paper, we formalize a small, but useful fragment of Quipper called Proto-Quipper-M. Unlike its parent Quipper, this language is type-safe and has a formal denotational and operational semantics. Proto-Quipper-M is also more general than Quipper, in that it can describe families of morphisms in any symmetric monoidal category, of which quantum circuits are but one example. We design Proto-Quipper-M from the ground up, by first giving a general categorical model of parameters and state. The distinction between parameters and state is also known from hardware description languages. A parameter is a value that is known at circuit generation time, whereas a state is a value that is known at circuit execution time. After finding some interesting categorical structures in the model, we then define the programming language to fit the model. We cement the connection between the language and the model by proving type safety, soundness, and adequacy properties.},
   year      = {2018},
@@ -977,7 +987,7 @@
   month         = feb,
   pages         = {7:1--7:10},
   publisher     = {{Association for Computing Machinery}},
-  series        = {{{RWDSL2018}}},
+  series        = {{{RWDSL}} '18},
   abstract      = {Quantum computing exploits quantum phenomena such as superposition and entanglement to realize a form of parallelism that is not available to traditional computing. It offers the potential of significant computational speed-ups in quantum chemistry, materials science, cryptography, and machine learning. The dominant approach to programming quantum computers is to provide an existing high-level language with libraries that allow for the expression of quantum programs. This approach can permit computations that are meaningless in a quantum context; prohibits succint expression of interaction between classical and quantum logic; and does not provide important constructs that are required for quantum programming. We present Q\#, a quantum-focused domain-specific language explicitly designed to correctly, clearly and completely express quantum algorithms. Q\# provides a type system; a tightly constrained environment to safely interleave classical and quantum computations; specialized syntax; symbolic code manipulation to automatically generate correct transformations of quantum operations; and powerful functional constructs which aid composition.},
   doi           = {10.1145/3183895.3183901},
   isbn          = {978-1-4503-6355-6},
@@ -1004,9 +1014,10 @@
 
 @inproceedings{Unruh2019a,
   author        = {Unruh, Dominique},
-  booktitle     = {2019 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}} ({{LICS}})},
+  booktitle     = {2019 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
   title         = {Quantum {{Hoare Logic}} with {{Ghost Variables}}},
   year          = {2019},
+  series        = {{{LICS}} '19},
   month         = jun,
   pages         = {1--13},
   abstract      = {Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces ``ghost variables'' to extend the expressive power of pre-/postconditions. Ghost variables are variables that do not actually occur in the program and are allowed to have arbitrary quantum states (in a sense, they are existentially quantified), and be entangled with program variables. Ghost variables allow us to express properties such as the distribution of a program variable or the fact that a variable has classical content. And as a case study, we show how quantum Hoare logic with ghost variables can be used to prove the security of the quantum one-time pad.},
@@ -1125,7 +1136,7 @@
   month     = jun,
   pages     = {1149--1162},
   publisher = {{Association for Computing Machinery}},
-  series    = {{{PLDI}} 2019},
+  series    = {{{PLDI}} '19},
   abstract  = {We derive a variant of quantum Hoare logic (QHL), called applied quantum Hoare logic (aQHL for short), by: 1. restricting QHL to a special class of preconditions and postconditions, namely projections, which can significantly simplify verification of quantum programs and are much more convenient when used in debugging and testing; and 2. adding several rules for reasoning about robustness of quantum programs, i.e. error bounds of outputs. The effectiveness of aQHL is shown by its applications to verify two sophisticated quantum algorithms: HHL (Harrow-Hassidim-Lloyd) for solving systems of linear equations and qPCA (quantum Principal Component Analysis).},
   doi       = {10.1145/3314221.3314584},
   isbn      = {978-1-4503-6712-7},
